[package]
name = "my-rust-two-cents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
int-enum = "0.4.0"
serde = "1.0.133"
serde_json = "1.0.74"
time = { version = "0.3.5", features = ["macros"] } 
unicode-segmentation = "1.8.0"

[features]
grapheme = []
